--- a/.github/workflows/deploy-to-azure-webapps-php.yml
+++ b/.github/workflows/deploy-to-azure-webapps-php.yml
@@ -73,7 +73,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: php-app
-          path: .
+          path: ./files/httpdocs
 
   deploy:
     permissions:
@@ -81,7 +81,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Azure (Production)'
+      name: 'AzureStack'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -89,6 +89,10 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: php-app
+      - uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          environment: 'AzureStack'
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -96,4 +100,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: './files/httpdocs/'
+          package: '.'
