--- a/.github/workflows/deploy-to-azure-webapps-php.yml
+++ b/.github/workflows/deploy-to-azure-webapps-php.yml
@@ -73,12 +73,26 @@ jobs:
       - name: Run composer install if composer.json exists
         if: steps.check_files.outputs.files_exists == 'true'
         run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
+        
+      - name: Zip on Ubuntu
+        # You may pin to the exact commit or the version.
+        # uses: nguyenquyhy/zip-release@fce5aed7bef4f8e25cacc8d0c7bafd71c36fa9ea
+        uses: nguyenquyhy/zip-release@v0.3.0
+        with:
+          # Filename for archive
+          filename: release.zip # default is release.zip
+          # Base path for archive files
+          path: ./files/httpdocs # optional, default is .
+          # Working directory before zipping
+          workingDirectory: . # optional, default is .
+          # List of excluded files/directories
+          # exclusions: # optional, default is 
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: php-app
-          path: ./files/httpdocs
+          path: release.zip
 
   deploy:
     permissions:
@@ -94,6 +108,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: php-app
+                
       - uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
@@ -105,4 +120,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: '.'
+          package: release.zip
