--- a/.github/workflows/deploy-to-azure-webapps-php.yml
+++ b/.github/workflows/deploy-to-azure-webapps-php.yml
@@ -26,7 +26,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: restoringpride    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: './files/httpdocs/'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_PACKAGE_PATH: './files/httpdocs/wp-content'      # set this to the path to your web app project, defaults to the repository root
   PHP_VERSION: '7.1'                  # set this to the PHP version to use
 
 permissions:
@@ -48,50 +48,18 @@ jobs:
         uses: shivammathur/setup-php@7c0b4c8c8ebed23eca9ec2802474895d105b11bc
         with:
           php-version: ${{ env.PHP_VERSION }}
-
-      - name: Check if composer.json exists
-        id: check_files
-        uses: andstor/file-existence-action@87d74d4732ddb824259d80c8a508c0124bf1c673
-        with:
-          files: 'composer.json'
-
-      - name: Get Composer Cache Directory
-        id: composer-cache
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: |
-          echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-      - name: Set up dependency caching for faster installs
-        uses: actions/cache@v3
-        if: steps.check_files.outputs.files_exists == 'true'
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-
-
-      - name: Run composer install if composer.json exists
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
         
-      - name: Zip on Ubuntu
-        # You may pin to the exact commit or the version.
-        # uses: nguyenquyhy/zip-release@fce5aed7bef4f8e25cacc8d0c7bafd71c36fa9ea
-        uses: nguyenquyhy/zip-release@v0.3.0
-        with:
-          # Filename for archive
-          filename: release.zip # default is release.zip
-          # Base path for archive files
-          path: ./files/httpdocs # optional, default is .
-          # Working directory before zipping
-          workingDirectory: . # optional, default is .
-          # List of excluded files/directories
-          # exclusions: # optional, default is 
-
+      - name: Install zip
+        uses: montudor/action-zip@v1
+        
+      - name: Zip output
+        run: zip -qq -r release.zip ./wp-content/
+        working-directory: ./files/httpdocs
+        
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: php-app
+          name: wordpress-app
           path: release.zip
 
   deploy:
@@ -107,7 +75,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: php-app
+          name: wordpress-app
                 
       - uses: azure/login@v1
         with:
