--- a/.github/workflows/deploy-to-azure-webapps-php.yml
+++ b/.github/workflows/deploy-to-azure-webapps-php.yml
@@ -59,8 +59,8 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: wordpress-app
-          path: release.zip
+          name: php-app
+          path: ./files/httpdocs/release.zip
 
   deploy:
     permissions:
@@ -75,7 +75,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: wordpress-app
+          name: php-app
                 
       - uses: azure/login@v1
         with:
