--- a/.github/workflows/deploy-to-azure-webapps-php.yml
+++ b/.github/workflows/deploy-to-azure-webapps-php.yml
@@ -53,7 +53,7 @@ jobs:
         uses: montudor/action-zip@v1
         
       - name: Zip output
-        run: zip -qq -r release.zip ./wp-content/
+        run: zip -qq -r release.zip ./wp-content/ ./wp-includes/ ./wp-admin/ 
         working-directory: ./files/httpdocs
         
       - name: Upload artifact for deployment job
