--- a/.github/workflows/deploy-to-azure-webapps-php.yml
+++ b/.github/workflows/deploy-to-azure-webapps-php.yml
@@ -25,7 +25,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: restoringpride    # set this to your application's name
+  AZURE_WEBAPP_NAME: restoringpride1    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: './files/httpdocs/wp-content'      # set this to the path to your web app project, defaults to the repository root
   PHP_VERSION: '7.1'                  # set this to the PHP version to use
 
