--- a/.github/workflows/deploy-to-azure-webapps-php.yml
+++ b/.github/workflows/deploy-to-azure-webapps-php.yml
@@ -25,9 +25,9 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: restoringpride1    # set this to your application's name
+  AZURE_WEBAPP_NAME: restoringpride-wp    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: './files/httpdocs/wp-content'      # set this to the path to your web app project, defaults to the repository root
-  PHP_VERSION: '7.1'                  # set this to the PHP version to use
+  PHP_VERSION: '8.2'                  # set this to the PHP version to use
 
 permissions:
   contents: read
@@ -59,7 +59,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: php-app
+          name: wp-app
           path: ./files/httpdocs/release.zip
 
   deploy:
@@ -68,14 +68,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'AzureStack'
+      name: 'Azure Web Deploy'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: php-app
+          name: wp-app
                 
       - uses: azure/login@v1
         with:
