--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
     - name: Checkout the latest version of the repo
+      uses: actions/checkout@v3
       
     - name: Docker Login
       uses: docker/login-action@v2.1.0
@@ -35,7 +35,7 @@ jobs:
         docker push restoringpride.azurecr.io/restoringpride:latest
     
     - name: Deploy the image to the Web app
-    - uses: azure/webapps-deploy@v2
+      uses: azure/webapps-deploy@v2
       with:
         app-name: 'restoringpride-wp'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
@@ -47,11 +47,11 @@ jobs:
     needs: build
     
     steps:
-    - uses: actions/checkout@v3
     - name: Checkout the latest version of the repo
+      uses: actions/checkout@v3
     
     - name: Login to Auzre for files upload
-    - uses: azure/login@v1
+      uses: azure/login@v1
       with:
         creds: '{"clientId":"${{ secrets.AZURE_DEPLOYMENT_USERNAME }}", "clientSecret": "${{ secrets.AZURE_DEPLOYMENT_SECRET }}", "tenantId":"${{ secrets.AZURE_TENANT_ID }}", "subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}"}'
 
