--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -22,7 +22,7 @@ jobs:
         # Server address of Docker registry. If not set then will default to Docker Hub
         registry: restoringpride.azurecr.io
         # Username used to log against the Docker registry
-        username:  ${{ secrets.AZURE_DEPLOYMENT_USERNAME }}  # optional
+        username:  ${{ secrets.AZURE_DEPLOYMENT_GUID }}  # optional
         # Password or personal access token used to log against the Docker registry
         password: ${{ secrets.AZURE_DEPLOYMENT_SECRET }} # optional
   
