--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -37,7 +37,7 @@ jobs:
   deploy-to-web-app:
     runs-on: ubuntu:latest
     name: Deploy the image to the Web app
-    
+    needs: build
     steps:
     
     - name: Deploy the image to the Web app
