--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -59,7 +59,10 @@ jobs:
     - name: Login to Auzre for files upload
       uses: azure/login@v1
       with:
-        creds: '{"clientId":"${{ secrets.AZURE_DEPLOYMENT_USERNAME }}", "clientSecret": "${{ secrets.AZURE_DEPLOYMENT_SECRET }}", "tenantId":"${{ secrets.AZURE_TENANT_ID }}", "subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}"}'
+        client-id: ${{ secrets.AZURE_DEPLOYMENT_GUID }}
+        client-secret: ${{ secrets.AZURE_DEPLOYMENT_SECRET }}
+        tenant-id: ${{ AZURE_TENANT_ID }}
+        subscription-id: ${{ AZURE_SUBSCRIPTION_ID }}
 
     - name: Upload wp-content/themes
       # You may pin to the exact commit or the version.
