--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -61,8 +61,8 @@ jobs:
       with:
         client-id: ${{ secrets.AZURE_DEPLOYMENT_GUID }}
         client-secret: ${{ secrets.AZURE_DEPLOYMENT_SECRET }}
-        tenant-id: ${{ AZURE_TENANT_ID }}
-        subscription-id: ${{ AZURE_SUBSCRIPTION_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - name: Upload wp-content/themes
       # You may pin to the exact commit or the version.
