--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -49,7 +49,7 @@ jobs:
 
   push-files:
     name: Push extra files to Azure to override the defaults
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     
     steps:
@@ -58,11 +58,11 @@ jobs:
     
     - name: Login to Auzre for files upload
       uses: azure/login@v1
-      with:
+      with:     
         client-id: ${{ secrets.AZURE_DEPLOYMENT_GUID }}
-        client-secret: ${{ secrets.AZURE_DEPLOYMENT_SECRET }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        enable-AzPSSession: true
 
     - name: Upload wp-content/themes
       # You may pin to the exact commit or the version.
