--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -68,7 +68,7 @@ jobs:
     - name: Login to Auzre for files upload
       uses: azure/login@v1
       with:     
-        client-id: ${{ secrets.AZURE_DEPLOYMENT_GUID }}
+        client-id: ${{ secrets.AZURE_TOKENS_RECEIVER_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         enable-AzPSSession: true
