--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -68,10 +68,7 @@ jobs:
     - name: Login to Auzre for files upload
       uses: azure/login@v1
       with:     
-        client-id: ${{ secrets.AZURE_TOKENS_RECEIVER_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        enable-AzPSSession: true
+        creds: '{"clientId":"${{ secrets.AZURE_DEPLOYMENT_GUID }}","clientSecret":"${{ secrets.AZURE_DEPLOYMENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
 
     - name: Upload wp-content/themes
       # You may pin to the exact commit or the version.
