--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -58,7 +58,7 @@ jobs:
 
   push-files:
     name: Push extra files to Azure to override the defaults
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     
     steps:
