Update and rename build_and_push_docker_image_to_azure.yml to build-and-push-docker-image-to-azure.yml

--- a/.github/workflows/build-and-push-docker-image-to-azure.yml
+++ b/.github/workflows/build-and-push-docker-image-to-azure.yml
@@ -1,8 +1,9 @@
 on:
-  workflow_call:
+  - workflow_call
+  - workflow_dispatch
     
 name: Build and push the Docker image to Azure
-run-name: Build & Push Docker Image ${{ env.GITHUB_RUN_ID }} - ${{ env.GITHUB_SHA }}
+run-name: Build & Push Docker Image ${{ vars.GITHUB_RUN_ID }} - ${{ vars.GITHUB_SHA }}
 
 jobs:
 
