--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -1,4 +1,4 @@
-name: Build and push the Docker image to Azure
+name: Build & deploy the whole shebang
 
 on:
   push:
@@ -17,79 +17,15 @@ concurrency:
 
 jobs:
 
-  build:
-    name: Build and push the image to Azure
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout the latest version of the repo
-      uses: actions/checkout@v3
-      
-    - name: Docker Login
-      uses: docker/login-action@v2.1.0
-      with:
-        # Server address of Docker registry. If not set then will default to Docker Hub
-        registry: restoringpride.azurecr.io
-        # Username used to log against the Docker registry
-        username:  ${{ secrets.AZURE_DEPLOYMENT_GUID }}  # optional
-        # Password or personal access token used to log against the Docker registry
-        password: ${{ secrets.AZURE_DEPLOYMENT_SECRET }} # optional
-  
-    - name: Build the Docker image
-      run: docker build ./files/httpdocs/ -t restoringpride.azurecr.io/restoringpride:${{ github.sha }} -t restoringpride.azurecr.io/restoringpride:latest
-      
-    - name: Push the docker image to Azure
-      run: |
-        docker push restoringpride.azurecr.io/restoringpride:${{ github.sha }} 
-        docker push restoringpride.azurecr.io/restoringpride:latest
- 
-  push-files:
-    name: Push extra files to Azure to override the defaults
-    runs-on: ubuntu-latest
-    needs: build
+  call-build-docker-image:
+    uses: Restoring-Pride/.github/workflows/build-and-push-docker-image-to-azure.yml@main
+    name: Build & deploy the Docker image to ACR
     
-    steps:
-    - name: Checkout the latest version of the repo
-      uses: actions/checkout@v3
+  deploy-files:
+    uses: Restoring-Pride/.github/workflows/push_files_to_azure_storage.yml@main
+    name: Push files to Azure storage
+    needs: call-build-docker-image
     
-    - name: Login to Auzre for files upload
-      uses: azure/login@v1
-      with:     
-        creds: '{"clientId":"${{ secrets.AZURE_DEPLOYMENT_GUID }}","clientSecret":"${{ secrets.AZURE_DEPLOYMENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
-
-    - name: Upload wp-content/themes
-      # You may pin to the exact commit or the version.
-      # uses: rnakamine/azure-files-upload@5c1081adbe0d65b9c0a8be234f0e17ae93c8b741
-      uses: rnakamine/azure-files-upload@v1.0.0
-      with:
-        # The connection string for the storage account.
-        connection_string: ${{ secrets.AZURE_FILES_CONNECTION_STRING }}
-        # The directory to upload files from.
-        source: ./files/httpdocs/wp-content/themes
-        # The destination of the upload operation.
-        destination: restoringpride/wp-content/themes
-        
-    - name: Upload wp-content/plugins
-      # You may pin to the exact commit or the version.
-      # uses: rnakamine/azure-files-upload@5c1081adbe0d65b9c0a8be234f0e17ae93c8b741
-      uses: rnakamine/azure-files-upload@v1.0.0
-      with:
-        # The connection string for the storage account.
-        connection_string: ${{ secrets.AZURE_FILES_CONNECTION_STRING }}
-        # The directory to upload files from.
-        source: ./files/httpdocs/wp-content/plugins
-        # The destination of the upload operation.
-        destination: restoringpride/wp-content/plugins
-      
   deploy-to-web-app:
-    runs-on: ubuntu:latest
-    name: Deploy the image to the Web app
-    needs: push-files
-    steps:
-    
-    - name: Deploy the image to the Web app
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'restoringpride-wp'
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        images: 'restoringpride.azurecr.io/restoringpride:latest'
+    uses: Restoring-Pride/.github/workflows/deploy-the-image-to-the-web-app.yml@main
+    needs: deploy-files
