--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -18,16 +18,16 @@ concurrency:
 jobs:
 
   call-build-docker-image:
-    uses: Restoring-Pride/.github/workflows/build-and-push-docker-image-to-azure.yml@main
+    uses: Restoring-Pride/RestoringPride.org/.github/workflows/build-and-push-docker-image-to-azure.yml@main
     name: Build & deploy the Docker image to ACR
     
   deploy-files:
-    uses: Restoring-Pride/.github/workflows/push_files_to_azure_storage.yml@main
+    uses: Restoring-Pride/RestoringPride.org/.github/workflows/push_files_to_azure_storage.yml@main
     name: Push files to Azure storage
     needs: call-build-docker-image
     
   deploy-to-web-app:
-    uses: Restoring-Pride/.github/workflows/deploy-the-image-to-the-web-app.yml@main
+    uses: Restoring-Pride/RestoringPride.org/.github/workflows/deploy-the-image-to-the-web-app.yml@main
     needs: deploy-files
     
   done:
