--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -36,7 +36,7 @@ jobs:
     
     steps:
       - name: Say I'm done!
-      - run: echo "I'm fucking DONE, BITCHES!!!"
+        run: echo "I'm fucking DONE, BITCHES!!!"
     
     
   
