--- a/.github/workflows/build-and-push-docker-image-to-azure.yml
+++ b/.github/workflows/build-and-push-docker-image-to-azure.yml
@@ -2,7 +2,7 @@ on:
   - workflow_call
   - workflow_dispatch
     
-name: Build and push the Docker image to Azure
+name: Build and push the Docker image to ACR
 run-name: Build & Push Docker Image ${{ vars.GITHUB_RUN_ID }} - ${{ vars.GITHUB_SHA }}
 
 jobs:
