--- a/.github/workflows/build-and-deploy-from-docker-image.yml
+++ b/.github/workflows/build-and-deploy-from-docker-image.yml
@@ -20,16 +20,19 @@ jobs:
   call-build-docker-image:
     name: Build & deploy the Docker image to ACR
     uses: Restoring-Pride/RestoringPride.org/.github/workflows/build-and-push-docker-image-to-azure.yml@main
+    secrets: inherit
     
   deploy-files:
     name: Push files to Azure storage
     uses: Restoring-Pride/RestoringPride.org/.github/workflows/push_files_to_azure_storage.yml@main
     needs: call-build-docker-image
+    secrets: inherit
     
   deploy-to-web-app:
     name: Deploy to the Web app
     uses: Restoring-Pride/RestoringPride.org/.github/workflows/deploy-the-image-to-the-web-app.yml@main
     needs: deploy-files
+    secrets: inherit
     
   done:
     runs-on: ubuntu-latest
