--- a/files/httpdocs/Dockerfile
+++ b/files/httpdocs/Dockerfile
@@ -13,4 +13,5 @@ RUN apt-get update && apt-get install -y \
 	certbot \
 	python3-certbot-nginx
 
-RUN ln -s /var/www/html/ /home/site/wwwroot/
+RUN rm -rf /home/site/wwwroot/
+RUN cp -r /var/www/html/ /home/site/wwwroot/
