--- a/files/httpdocs/Dockerfile
+++ b/files/httpdocs/Dockerfile
@@ -11,7 +11,8 @@ COPY ./wp-config.php /home/site/wwwroot/wp-config.php
 # Install the PHP extensions we need
 RUN apt-get update && apt-get install -y \
 	certbot \
-	python3-certbot-nginx
+	python3-certbot-nginx \
+	sshd
 
-RUN rm -rf /home/site/wwwroot/
-RUN cp -r /var/www/html/ /home/site/wwwroot/
+# RUN rm -rf /home/site/wwwroot/
+# RUN cp -r /var/www/html/ /home/site/wwwroot/
