--- a/files/httpdocs/Dockerfile
+++ b/files/httpdocs/Dockerfile
@@ -12,7 +12,10 @@ COPY ./wp-config.php /home/site/wwwroot/wp-config.php
 RUN apt-get update && apt-get install -y \
 	certbot \
 	python3-certbot-nginx \
-	sshd
+	openssh-server
+
+RUN systemctl enable ssh --now
+RUN systemctl start ssh
 
 # RUN rm -rf /home/site/wwwroot/
 # RUN cp -r /var/www/html/ /home/site/wwwroot/
