--- a/.github/workflows/push_files_to_azure_storage.yml
+++ b/.github/workflows/push_files_to_azure_storage.yml
@@ -28,7 +28,7 @@ jobs:
         # The directory to upload files from.
         source: ./files/httpdocs/wp-content/themes
         # The destination of the upload operation.
-        destination: restoringpride/wp-content/themes
+        destination: wp-content-themes
         
     - name: Upload wp-content/plugins
       # You may pin to the exact commit or the version.
@@ -39,5 +39,16 @@ jobs:
         # The directory to upload files from.
         source: ./files/httpdocs/wp-content/plugins
         # The destination of the upload operation.
-        destination: restoringpride/wp-content/plugins
+        destination: wp-content-plugins
+      
+    - name: Upload wp-content/uploads
+      # You may pin to the exact commit or the version.
+      uses: rnakamine/azure-files-upload@v1.0.0
+      with:
+        # The connection string for the storage account.
+        connection_string: ${{ secrets.AZURE_FILES_CONNECTION_STRING }}
+        # The directory to upload files from.
+        source: ./files/httpdocs/wp-content/uploads
+        # The destination of the upload operation.
+        destination: wp-content-uploads
       
