--- a/files/httpdocs/docker-compose.yml
+++ b/files/httpdocs/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     #   - ./wp-content/plugins:/home/site/wwwroot/wp-content/plugins
     #   - ./wp-content/uploads:/home/site/wwwroot/wp-content/uploads
     #   - ./wp-config.php:/home/site/wwwroot/wp-config.php
+    command: /home/startup.sh
+
   openssh-server:
     image: lscr.io/linuxserver/openssh-server:latest
     container_name: openssh-server
