--- a/.github/workflows/send-webhook-to-server.yml
+++ b/.github/workflows/send-webhook-to-server.yml
@@ -11,15 +11,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
-      - name: Webhook Trigger
+          
+      - name: Post to the webhook to signal a CD
       # You may pin to the exact commit or the version.
-        uses: zzzze/webhook-trigger@v1.0.0
+        uses: ArthurYdalgo/http-request-action@1.12.1
         with:
-          # Data to be posted
-          data: '{vars}'
-          # Endpoint URL
-          webhook_url: https://$restoringpride-wp:a6nchFfhweo2Tg9sA1sF92HlN8Zm7rmr7k3a8meH6zFiQv0X8qT0jxxkooNg@restoringpride-wp.scm.azurewebsites.net/api/registry/webhook 
-    
-    
-  
+          # Request URL
+          url: "https://$restoringpride-wp:a6nchFfhweo2Tg9sA1sF92HlN8Zm7rmr7k3a8meH6zFiQv0X8qT0jxxkooNg@restoringpride-wp.scm.azurewebsites.net/api/registry/webhook"
+          # Request Method
+          method: POST # optional, default is POST
+          # Content Type
+          contentType: application/json # optional
+          # Request Body as JSON String
+          data: "{'GITHUB_ACTOR':'${{ vars.GITHUB_ACTOR }}', 'GITHUB_BASE_REF': '${{ vars.GITHUB_BASE_REF }}', 'GITHUB_ENV': '${{ vars.GITHUB_ENV }}', 'GITHUB_REF': '${{ vars.GITHUB_REF }}',  'GITHUB_RUN_ID': '${{ vars.GITHUB_RUN_ID }}', 'GITHUB_SHA': '${{ vars.GITHUB_SHA }}'}" # optional, default is {}
+          # Map of absolute file paths as JSON String
+          #files: # optional, default is {}
+          # A single absolute file path
+          #file: # optional
+          # Auth Username
+          #username: # optional
+          # Auth Password
+          #password: # optional
+          # Request Timeout in Sec
+          #timeout: # optional, default is 5000
+          # Bearer Authentication Token
+          #bearerToken: # optional
+          # Custom HTTP Headers
+          #customHeaders: # optional
+          # Prevent this Action to fail if the request respond without an response
+          #preventFailureOnNoResponse: # optional
+          # Prevent this Action to fail if the request respond with one of the configured StatusCodes
+          #ignoreStatusCodes: # optional
+          # Escape newlines in data string content
+          #escapeData: # optional
+          # Certificate authority as string in PEM format
+          #httpsCA: # optional
