--- a/.github/workflows/deploy-the-image-to-the-web-app.yml
+++ b/.github/workflows/deploy-the-image-to-the-web-app.yml
@@ -3,7 +3,7 @@ on:
   - workflow_dispatch
   
 name: Deploy the image to the Web app
-run-name: Deploy the image to the Web app ${{ vars.GITHUB_RUN_ID }} - ${{ vars.GITHUB_SHA }}
+run-name: Deploy the image to the Web app ${{ github.head_ref }} - ${{ github.run_id }} - ${{ github.sha }} 
 
 jobs:
   deploy-to-web-app:
@@ -16,5 +16,9 @@ jobs:
       with:
         app-name: 'restoringpridedotorg'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        images: 'restoringpride.azurecr.io/restoringpride:latest'
+        configuration-file: /home/docker-compose.yml
+        images: 
+          restoringpride.azurecr.io/restoringpride:${{ github.sha }} 
+          lscr.io/linuxserver/openssh-server:latest
+          wordpresss:cli
         
