--- a/.github/workflows/deploy-the-image-to-the-web-app.yml
+++ b/.github/workflows/deploy-the-image-to-the-web-app.yml
@@ -17,7 +17,7 @@ jobs:
         app-name: 'restoringpridedotorg'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         configuration-file: /home/docker-compose.yml
-        images: 
+        images: |
           restoringpride.azurecr.io/restoringpride:${{ github.sha }} 
           lscr.io/linuxserver/openssh-server:latest
           wordpresss:cli
