spelling "docker" right....

--- a/files/httpdocs/Dockerfile
+++ b/files/httpdocs/Dockerfile
@@ -6,4 +6,4 @@ RUN mkdir -p /home/site/wwwroot/wp-content/uploads/
 COPY ./wp-content/themes/** /home/site/wwwroot/wp-content/themes/
 COPY ./wp-content/plugins/** /home/site/wwwroot/wp-content/plugins/
 COPY ./wp-content/uploads/** /home/site/wwwroot/wp-content/uploads/
-COPY ./docler-compose.yml /home/docker-compose.yml
+COPY ./docker-compose.yml /home/docker-compose.yml
