--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,14 @@ services:
   wordpress:
     container_name: restoringpride
     image: restoringpride.azurecr.io/restoringpride:${LABEL}
-    build: /home/site/wwwroot/
+    build: ${APACHE_DOCUMENT_ROOT}
     restart: unless-stopped
     runtime: PHP
-    working_dir: /home/site/wwwroot/
+    working_dir: ${APACHE_DOCUMENT_ROOT}
     ports:
       - "80:8081"
     volumes:
-      - wordpress:/home/site/wwwroot/
-
+      - ${APACHE_DOCUMENT_ROOT}
   # wordpress-cli:
   #   image: wordpress:cli
   #   container_name: wordpress-cli
