--- a/.github/workflows/deploy-the-image-to-the-web-app.yml
+++ b/.github/workflows/deploy-the-image-to-the-web-app.yml
@@ -14,11 +14,11 @@ jobs:
     - name: Deploy the image to the Web app
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'restoringpridedotorg'
+        app-name: ${{ secrets.AZURE_APP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         configuration-file: /home/docker-compose.yml
-        images: |
+        images: #|
           restoringpride.azurecr.io/restoringpride:${{ github.sha }} 
-          lscr.io/linuxserver/openssh-server:latest
-          wordpresss:cli
+          #lscr.io/linuxserver/openssh-server:latest
+          #wordpresss:cli
         
