--- a/.github/workflows/deploy-the-image-to-the-web-app.yml
+++ b/.github/workflows/deploy-the-image-to-the-web-app.yml
@@ -1,24 +1,22 @@
 on:
   - workflow_call
   - workflow_dispatch
-  
+
 name: Deploy the image to the Web app
-run-name: Deploy the image to the Web app ${{ github.head_ref }} - ${{ github.run_id }} - ${{ github.sha }} 
+run-name: Deploy the image to the Web app ${{ github.head_ref }} - ${{ github.run_id }} - ${{ github.sha }}
 
 jobs:
   deploy-to-web-app:
     runs-on: ubuntu-latest
     name: Deploy the image to the Web app
     steps:
-    
-    - name: Deploy the image to the Web app
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ secrets.AZURE_APP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        configuration-file: /home/docker-compose.yml
-        images: #|
-          restoringpride.azurecr.io/restoringpride:${{ github.sha }} 
-          #lscr.io/linuxserver/openssh-server:latest
-          #wordpresss:cli
-        
+      - name: Deploy the image to the Web app
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ secrets.AZURE_APP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          configuration-file: /home/docker-compose.yml
+          images:
+            restoringpride.azurecr.io/restoringpride:${{ github.sha }}
+            #lscr.io/linuxserver/openssh-server:latest
+            #wordpresss:cli
