--- a/.github/workflows/deploy-the-image-to-the-web-app.yml
+++ b/.github/workflows/deploy-the-image-to-the-web-app.yml
@@ -15,8 +15,15 @@ jobs:
         with:
           app-name: ${{ secrets.AZURE_APP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          configuration-file: /home/docker-compose.yml
+          # configuration-file: /home/docker-compose.yml
           images:
             restoringpride.azurecr.io/restoringpride:${{ github.sha }}
             #lscr.io/linuxserver/openssh-server:latest
             #wordpresss:cli
+
+      - name: Setup Docker /home/docker-compose.yml
+        run: az webapp config container set \
+            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP_NAME }} \
+            --name ${{ secrets.AZURE_APP_NAME }} \
+            --multicontainer-config-type compose \
+            --multicontainer-config-file /home/docker-compose.yml
