--- a/.github/workflows/deploy-the-image-to-the-web-app.yml
+++ b/.github/workflows/deploy-the-image-to-the-web-app.yml
@@ -9,18 +9,27 @@ jobs:
   deploy-to-web-app:
     runs-on: ubuntu-latest
     name: Deploy the image to the Web app
+    
     steps:
-      - name: Deploy the image to the Web app
-        uses: azure/webapps-deploy@v2
+      - name: Azure Login
+        uses: Azure/login@v1.4.6
         with:
-          app-name: ${{ secrets.AZURE_APP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          # configuration-file: /home/docker-compose.yml
-          images:
-            restoringpride.azurecr.io/restoringpride:${{ github.sha }}
-            #lscr.io/linuxserver/openssh-server:latest
-            #wordpresss:cli
-
+          # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
+          # ClientId of the Azure Service principal created.
+          client-id: ${{secrets.AZURE_DEPLOYMENT_GUID }} # optional
+          # TenantId of the Azure Service principal created.
+          tenant-id: ${{secrets.AZURE_TENANT_ID }}# optional
+          # Azure subscriptionId
+          subscription-id: ${{secrets.AZURE_SUBSCRPTION_ID }}# optional
+          # Set this value to true to enable Azure PowerShell Login in addition to Az CLI login
+#           enable-AzPSSession: # optional
+          # Name of the environment. Supported values are azurecloud, azurestack, azureusgovernment, azurechinacloud, azuregermancloud. Default being azurecloud
+#           environment: # optional, default is azurecloud
+          # Set this value to true to enable support for accessing tenants without subscriptions
+#           allow-no-subscriptions: # optional
+          # Provide audience field for access-token. Default value is api://AzureADTokenExchange
+#           audience: # optional, default is api://AzureADTokenExchange
+          
       - name: Setup Docker /home/docker-compose.yml
         run: az webapp config container set \
             --docker-custom-image-name "restoringpride"
