--- a/.github/workflows/deploy-the-image-to-the-web-app.yml
+++ b/.github/workflows/deploy-the-image-to-the-web-app.yml
@@ -17,11 +17,20 @@ jobs:
           # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
           creds: '{"clientId":"${{ secrets.AZURE_DEPLOYMENT_GUID }}","clientSecret":"${{ secrets.AZURE_DEPLOYMENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
           
-      - name: Setup Docker /home/docker-compose.yml
-        run: az webapp config container set \
-            --docker-custom-image-name "restoringpride:${{ github.sha }}"
-            --docker-registry-server-url https://restoringpride.azurecr.io
-            --docker-registry-server-user ${{ secrets.AZURE_DEPLOYMENT_USERNAME }}
-            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP_NAME }} \
-            --name ${{ secrets.AZURE_APP_NAME }} \
-            --multicontainer-config-type compose
+          
+      - name: Setup Docker Compose
+        run: |
+          az webapp config container set \
+          --docker-custom-image-name  "restoringpride:${{ github.sha }}" \
+          --docker-registry-server-password ${{ secrets.AZURE_DEPLOYMENT_SECRET }} \
+          --docker-registry-server-url https://restoringpride.azurecr \
+          --docker-registry-server-user ${{ secrets.AZURE_DEPLOYMENT_USERNAME }} \
+          --enable-app-service-storage true \
+          # [--ids]
+          --multicontainer-config-file "/home/docker-compose.yml" \
+          --multicontainer-config-type COMPOSE \
+          --name ${{ secrets.AZURE_APP_NAME }} \
+          --resource-group ${{ secrets.AZURE_RESOURCE_GROUP_NAME }} \
+          --slot Production \
+          --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
