--- a/.github/workflows/deploy-the-image-to-the-web-app.yml
+++ b/.github/workflows/deploy-the-image-to-the-web-app.yml
@@ -12,10 +12,10 @@ jobs:
     
     steps:
       - name: Azure Login
-        uses: Azure/login@v1.4.6
-        with:
-          # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
-          creds: '{"clientId":"${{ secrets.AZURE_DEPLOYMENT_GUID }}","clientSecret":"${{ secrets.AZURE_DEPLOYMENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
+        run: az login -u ${{ AZURE_SERVICE_PRINCIPAL_USERNAME }} -p ${{ secrets.AZURE_DEPLOYMENT_SECRET }}
+#        with:
+#          # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
+#          creds: '{"clientId":"${{ secrets.AZURE_DEPLOYMENT_GUID }}","clientSecret":"${{ secrets.AZURE_DEPLOYMENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
           
           
       - name: Setup Docker Compose
