--- a/.github/workflows/build-and-push-docker-image-to-azure.yml
+++ b/.github/workflows/build-and-push-docker-image-to-azure.yml
@@ -29,7 +29,7 @@ jobs:
         # Github access token for private repositories
         git_access_token: ${{ secrets.GITHUB_TOKEN }}
         # Docker image name
-        image: restoringpride # optional
+        # image: restoringpride # optional
         # Docker image tag, default to the commit SHA
         tag: ${{ github.sha }} # optional
         # Branch to build from, defaults to master
