--- a/.github/workflows/build-and-push-docker-image-to-azure.yml
+++ b/.github/workflows/build-and-push-docker-image-to-azure.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Set the label in the environment varialble
-      run: echo "LABEL=${{{ github.sha }}}" >> .env
+      run: echo "LABEL=${{ github.sha }}" >> .env
     - name: Build the container directly in the registry
       uses: Azure/acr-build@v1
       with:
