--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,8 @@
-name: restoringpride
+name: ${CONTAINER_NAME}
 
 services:
   wordpress:
-    container_name: restoringpride
-    image: restoringpride.azurecr.io/restoringpride:${LABEL}
-    build: ${APACHE_DOCUMENT_ROOT}
-    restart: unless-stopped
-    working_dir: ${APACHE_DOCUMENT_ROOT}
-    environment:
-    - APACHE_DOCUMENT_ROOT:/home/site/wwwroot/
-    - IMAGE_NAME:restoringpride
-    - APPLICATION_ROOT:/home/
     ports:
       - "80:8081"
     volumes:
       - ${APACHE_DOCUMENT_ROOT}
-  # wordpress-cli:
-  #   image: wordpress:cli
-  #   container_name: wordpress-cli
-  #   restart: unless-stopped
-
-  # openssh-server:
-  #   image: lscr.io/linuxserver/openssh-server:latest
-  #   container_name: openssh-server
-  #   hostname: openssh #optional
-  #   # domainname: openssh #optional
-  #   environment:
-  #     - PUID=1000
-  #     - PGID=1000
-  #     - TZ=Etc/UTC
-  #     # - PUBLIC_KEY=yourpublickey #optional
-  #     # - PUBLIC_KEY_FILE=/path/to/file #optional
-  #     # - PUBLIC_KEY_DIR=/path/to/directory/containing/_only_/pubkeys #optional
-  #     # - PUBLIC_KEY_URL=https://github.com/username.keys #optional
-  #     - SUDO_ACCESS=true #optional
-  #     # - PASSWORD_ACCESS=false #optional
-  #     # - USER_PASSWORD=password #optional
-  #     # - USER_PASSWORD_FILE=/path/to/file #optional
-  #     # - USER_NAME=linuxserver.io #optional
-  #     # volumes:
-  #     #   - /path/to/appdata/config:/config
-  #   ports:
-  #     - 2222:2222
-  #   restart: unless-stopped
