--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -3,5 +3,6 @@ FROM wordpress:latest as wittdotenv
 
 RUN cat ${APP_ROOT}/.env > ${APACHE_DOCUMENT_ROOT}.env;
 RUN cat ${APP_ROOT}/local.env >> ${APACHE_DOCUMENT_ROOT}.env;
+RUN mv Dockerfile.local Dockerfile
 
 INCLUDE+ Dockerfule.base
