--- a/production.env
+++ b/production.env
@@ -1,1 +1,2 @@
-IMAGE_NAME=restoringpride.azurecr.io/restoringpride
+IMAGE_SERVER=restoringpride.azurecr.io/
+IMAGE_NAME=${IMAGE_SERVER}restoringpride
