--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,6 +1,21 @@
 # syntax = edrevo/dockerfile-plus
 FROM withdotenv as witholdcontents
 
+LABEL org.opencontainers.inage="https://avatars.githubusercontent.com/u/117142615?s=200&v=4"
+LABEL org.opencontainers.title="Restoring Pride"
+LABEL org.opencontainers.vendor="Restoring Pride.org"
+LABEL org.opencontainers.image.vendors="Restoring Pride.org, WordPress"
+LABEL org.opencontainers.description="Restoring Pride is a non-profit organization that provides support to the LGBTQ+ community in the form of education, advocacy, and community outreach."
+LABEL org.opencontainers.url="https://restoringpride.org"
+LABEL org.opencontainers.authors="Restoring Pride"
+LABEL org.opencontainers.licenses="MIT"
+LABEL org.opencontainers.version="2.0.0"
+LABEL org.restoringpride.project.git.url=${GITHUB_REPO_URL}
+LABEL org.restoringpride.project.git.commit=${GITHUB_COMMIT}
+LABEL org.opencontainers.image.created=${BUILD_DATE}
+LABEL org.opencontainers.image.revision=${GITHUB_COMMIT}
+
+
 ADD ./files/httpdocs/wp-content/themes/ /usr/src/themes/
 ADD ./files/httpdocs/wp-content/plugins/ /usr/src/plugins/
 ADD ./files/httpdocs/wp-content/uploads/ /usr/src/uploads/
@@ -28,3 +43,5 @@ RUN mkdir -p ${APP_ROOT}wp-cli/; \
 	mv ${APP_ROOT}wp-cli/wp-cli.phar /usr/local/etc/wp-cli/; \
 	curl https://raw.githubusercontent.com/wp-cli/wp-cli/main/utils/wp-completion.bash -o /usr/local/etc/wp-cli/wp-completion.bash; \
 	echo "source /usr/local/etc/wp-cli/wp-completion.bash" >> ~/.bash_profile;
+
+LABEL com.docker.desktop.extension.icon=""
