--- a/local.env
+++ b/local.env
@@ -1,2 +1,4 @@
 LABEL=latest
-IMAGE_NAME=restoringpride:${LABEL}
+IMAGE_SERVER=
+IMAGE_NAME=${IMAGE_SERVER}${CONTAINER_NAME}:${LABEL}
+ENVIRONMENT_NAME=Local
