--- a/production.env
+++ b/production.env
@@ -1,2 +1,3 @@
 IMAGE_SERVER=restoringpride.azurecr.io/
-IMAGE_NAME=${IMAGE_SERVER}restoringpride
+IMAGE_NAME=${IMAGE_SERVER}%{CONTAINER_NAME}${LABEL}
+ENVIRONMENT_NAME=Production
