--- a/.github/workflows/move-and-populate-final-production-ready-files.yml
+++ b/.github/workflows/move-and-populate-final-production-ready-files.yml
@@ -23,10 +23,17 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3.4.0
 
-    - run: | 
+    - name: Move and populate the final production files=
+      run: | 
         mv docker-compose.production.yml docker-compose.yml; \
         mv Dockerfile.produdction Dockerfile; \
         cat production.env >> .env;
+        echo GITHUB_REVISION=${{ github.revision }} >> .env;
+        echo GITHUB_REPO_URL=${{ github.repository_url }} >> .env;
+        echo GITHUB_SHA=${{ github.sha }} >> .env;
+        echo GITHUB_RUN_ID=${{ github.run_id }} >> .env;
+        echo GITHUB_RUN_NUMBER=${{ github.run_number }} >> .env;
+        echo GITHUB_RUN_ATTEMPT=${{ github.run_attempt }} >> .env;
         echo "LABEL=${{ github.sha }}" >> .env;
          
     - name: Push the changes to a "deployment" branch
